# futwaiter

./: Cargo.toml  README.md
examples/: futwaiter.rs
src/: global.rs  lib.rs  tests.rs  waitable.rs
