[package]
name = "futwaiter"
version = "0.1.0"
authors = ["Bells307"]
description = "The container of Future's that has the ability to complete them all at once"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bells307/futwaiter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
global = []

[dependencies]
futures = "0.3.30"
pin-project-lite = "0.2.13"
lazy_static = "1.4.0"
parking_lot = "0.12.1"

[dev-dependencies]
futures-timer = "3.0.3"
